# IBU-Operations-Schedule

./: .env.example  .gitignore  EMPLOYEE_GUIDE.docx  MANAGER_GUIDE.docx  README.md  USER_GUIDE.md  action_queue.json  audit_log.json  availabilities.json  availability_requests.json  employees.json  error_logs.json  events.json  ibu_schedule.xlsx  notifications.json  passwords.json  pyproject.toml  requirements.txt  schedules.json  staging_data.json  system_config.json  vercel.json
.github/workflows/: daily-sync.yml
api/: __init__.py  index.py  main.py  requirements.txt
api/backend/: ARCHITECTURE.md  SCHEDULER_PROPOSAL.md  audit_logger.py  auth.py  cache_manager.py  convert_excel_to_schedules.py  create_employees_sheet.py  data_store.py  data_store_excel.py  excel_store.py  filter_employees.py  fix_job_types.py  flow_storage.py  github_storage.py  init_excel_and_migrate.py  json_data.py  json_store.py  log_storage.py  main.py  models.py  scheduler.py  storage.py  sync_excel.py  sync_json_to_blob.py  test_upload.xlsx  transaction_manager.py  utils.py  vercel.json
api/backend/data/: config.json  employees.json  passwords.json  schedules.json
backend/: analyze_location_coverage.py  auth.py  blob_config.py  data_store.py  excel_store.py  main.py  models.py  requirements.txt  scheduler.py  storage.py  sync_employees.py
backend/data/: employees.json
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: admin-login.html
frontend/src/: App.tsx  api.ts  auth.ts  index.css  vite-env.d.ts
(+25 files in other folders)
