[project]
name = "ibu-operations-schedule"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==1.10.13",
    "python-multipart==0.0.6",
    "python-dateutil==2.8.2",
    "openpyxl==3.1.2",
    "vercel-blob==0.4.2",
    "mangum==0.17.0",
]

[tool.vercel]
entrypoint = "api:app"
